src/test/ui/wf/wf-trait-bound.stderr
error[E0277]: the trait bound `U: std::marker::Copy` is not satisfied
  --> $DIR/wf-trait-bound.rs:9:1
   |
LL | / trait SomeTrait<T,U>
LL | |     where T: ExtraCopy<U>
LL | | {
LL | | }
   | |_^ the trait `std::marker::Copy` is not implemented for `U`
   |
   = help: consider adding a `where U: std::marker::Copy` bound
note: required by `ExtraCopy`
  --> $DIR/wf-trait-bound.rs:7:1
   |
LL | trait ExtraCopy<T:Copy> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
